chore: adding getUsers getUser & getSelf in swagger doc
